force-app/main/default/objects/AssignmentGroupMember__c/AssignmentGroupMember__c.object-meta.xml
<CustomObject>
    <label>Membro do Grupo de Atribuição</label>
    <nameField>
        <displayFormat>MGA-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Membros do Grupo de Atribuição</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>