force-app/main/default/objects/AssignmentGroupMember__c/fields/AssignmentGroup__c.field-meta.xml
<CustomField>
    <fullName>AssignmentGroup__c</fullName>
    <label>Grupo de Atribuição</label>
    <referenceTo>AssignmentGroup__c</referenceTo>
    <relationshipLabel>Membros do Grupo de Atribuição</relationshipLabel>
    <relationshipName>AssignmentGroupMembers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>