force-app/main/default/objects/AssignmentGroupMember__c/fields/LastAssignmentDate__c.field-meta.xml
<CustomField>
    <fullName>LastAssignmentDate__c</fullName>
    <label>Data da Última Atribuição</label>
    <type>DateTime</type>
</CustomField>