force-app/main/default/objects/AssignmentGroupMember__c/fields/NumberRecordsAssigned__c.field-meta.xml
<CustomField>
    <fullName>NumberRecordsAssigned__c</fullName>
    <label>Número de Registros Atribuídos</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>